samples/_failures_safe/1761714335_e92f96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e675e3d4.c: In function ‘main’:
./samples/SAFE/__tmp_e675e3d4.c:151:17: error: expected declaration or statement at end of input
  151 |                 }
      |                 ^
./samples/SAFE/__tmp_e675e3d4.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e675e3d4.c:151:17: error: expected declaration or statement at end of input
